[gd_scene load_steps=3 format=3 uid="uid://bdft8v1qtxr0v"]

[ext_resource type="Script" path="res://src/match-simulator/action-util/action_util.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bnh7liy4jw7uk" path="res://src/match-simulator/team/team.tscn" id="2"]

[node name="ActionUtil" type="Node"]
script = ExtResource("1")

[node name="HomeTeam" parent="." instance=ExtResource("2")]

[node name="AwayTeam" parent="." instance=ExtResource("2")]
